--- a/app/app.html
+++ b/app/app.html
@@ -27,17 +27,19 @@
       // renderer process
       if (process.env.NODE_ENV === 'development') {
         scripts.push('../dll/renderer.dev.dll.js');
+        scripts.push('../lib/cortex.js');
+      } else {
+        scripts.push('./dist/cortex.entry.js');
       }
 
       // Dynamically insert the bundled app script in the renderer process
       const port = process.env.PORT || 1212;
       scripts.push(
         (process.env.HOT)
-          ? 'http://localhost:' + port + '/dist/renderer.dev.js'
-          : './dist/renderer.prod.js'
+          ? 'http://localhost:' + port + '/dist/main.entry.js'
+          : './dist/main.entry.js'
       );
 
-      scripts.push('../lib/cortex.js');
 
       document.write(
         scripts
