--- a/app/app.html
+++ b/app/app.html
@@ -27,9 +27,9 @@
       // renderer process
       if (process.env.NODE_ENV === 'development') {
         scripts.push('../dll/renderer.dev.dll.js');
-        scripts.push('../lib/cortex.js');
+        // scripts.push('../lib/cortex.js');
       } else {
-        scripts.push('./dist/cortex.entry.js');
+        // scripts.push('./dist/cortex.entry.js');
       }
 
       // Dynamically insert the bundled app script in the renderer process
