--- a/app/app.html
+++ b/app/app.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <title>BrainWaves</title>
     <script>
-      (function() {
-        if (!process.env.HOT) {
+      (() => {
+        if (typeof process !== 'object' || (typeof process === 'object' && !process.env.HOT)) {
           const link = document.createElement('link');
           link.rel = 'stylesheet';
           link.href = './dist/style.css';
@@ -20,25 +20,27 @@
     <div id="root"></div>
     <script>
       {
-        const scripts = [];
+        if (typeof process === 'object') {
+          const scripts = [];
 
-        // Dynamically insert the DLL script in development env in the
-        // renderer process
-        if (process.env.NODE_ENV === 'development') {
-          scripts.push('../dll/renderer.dev.dll.js');
+          // Dynamically insert the DLL script in development env in the
+          // renderer process
+          if (process.env.NODE_ENV === 'development') {
+            scripts.push('../dll/renderer.dev.dll.js');
+          }
+
+          // Dynamically insert the bundled app script in the renderer process
+          const port = process.env.PORT || 1212;
+          scripts.push(
+            process.env.HOT
+              ? 'http://localhost:' + port + '/dist/main.entry.js'
+              : './dist/main.entry.js'
+          );
+
+          document.write(
+            scripts.map((script) => `<script defer src="${script}"><\/script>`).join('')
+          );
         }
-
-        // Dynamically insert the bundled app script in the renderer process
-        const port = process.env.PORT || 1212;
-        scripts.push(
-          process.env.HOT
-            ? 'http://localhost:' + port + '/dist/main.entry.js'
-            : './dist/main.entry.js'
-        );
-
-        document.write(
-          scripts.map((script) => `<script defer src="${script}"><\/script>`).join('')
-        );
       }
     </script>
   </body>
