--- a/app/app.html
+++ b/app/app.html
@@ -37,7 +37,9 @@
         );
 
         document.write(
-          scripts.map((script) => `<script defer src="${script}"><\/script>`).join('')
+          scripts
+            .map(script => `<script defer src="${script}"><\/script>`)
+            .join('')
         );
       }
     </script>
