--- a/app/app.html
+++ b/app/app.html
@@ -4,8 +4,11 @@
     <meta charset="utf-8" />
     <title>BrainWaves</title>
     <script>
-      (function() {
-        if (!process.env.HOT) {
+      (() => {
+        if (
+          typeof process !== 'object' ||
+          (typeof process === 'object' && !process.env.START_HOT)
+        ) {
           const link = document.createElement('link');
           link.rel = 'stylesheet';
           link.href = './dist/style.css';
@@ -15,32 +18,32 @@
       })();
     </script>
   </head>
-
   <body>
     <div id="root"></div>
     <script>
-      {
+      if (typeof process === 'object') {
         const scripts = [];
 
-        // Dynamically insert the DLL script in development env in the
-        // renderer process
         if (process.env.NODE_ENV === 'development') {
+          // Dynamically insert the DLL script in development env in the
+          // renderer process
           scripts.push('../dll/renderer.dev.dll.js');
         }
+        if (process.env.START_HOT) {
+          // Dynamically insert the bundled app script in the renderer process
+          const port = process.env.PORT || 1212;
+          scripts.push(`http://localhost:${port}/dist/renderer.dev.js`);
+        } else {
+          scripts.push('./dist/renderer.prod.js');
+        }
 
-        // Dynamically insert the bundled app script in the renderer process
-        const port = process.env.PORT || 1212;
-        scripts.push(
-          process.env.HOT
-            ? 'http://localhost:' + port + '/dist/main.entry.js'
-            : './dist/main.entry.js'
-        );
-
-        document.write(
-          scripts
-            .map(script => `<script defer src="${script}"><\/script>`)
-            .join('')
-        );
+        if (scripts.length) {
+          document.write(
+            scripts
+              .map(script => `<script defer src="${script}"><\/script>`)
+              .join('')
+          );
+        }
       }
     </script>
   </body>
